Fix overflow and style desktop About section

--- a/css/styles.css
+++ b/css/styles.css
@@ -364,4 +364,8 @@
   .mainPadding {
     display: flex;
   }
+
+  .flex-reverse {
+    flex-direction: row-reverse;
+  }
 }
